--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/material-bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.0.8",
     "expo": "~36.0.0",
     "expo-asset": "^8.0.0",
     "expo-linear-gradient": "^8.0.0",
-    "firebase": "^7.9.1",
-    "firebase-admin": "^8.9.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-material-bottom-navigation": "^1.0.5",
     "react-native-navigation": "^6.0.1",
+    "react-native-paper": "^3.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.1.0",
@@ -32,10 +33,7 @@
     "react-navigation": "^4.2.1",
     "react-navigation-stack": "^2.2.2",
     "react-redux": "^7.2.0",
-    "react-redux-firebase": "^3.1.1",
-    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
-    "redux-firestore": "^0.12.0",
     "redux-thunk": "^2.3.0",
     "thunk": "0.0.1"
   },
