--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.12.2",
     "react-navigation": "^4.2.1",
+    "react-navigation-drawer": "^2.4.6",
     "react-navigation-stack": "^2.2.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
