--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/masked-view": "^0.1.5",
+    "@react-navigation/bottom-tabs": "^5.4.2",
     "@react-navigation/material-bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.0.8",
+    "axios": "^0.19.2",
     "expo": "~36.0.0",
     "expo-asset": "^8.0.0",
     "expo-linear-gradient": "^8.0.0",
@@ -19,7 +21,6 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
-    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-material-bottom-navigation": "^1.0.5",
     "react-native-navigation": "^6.0.1",
